feat: rename UserRepository tests